Archive2/33/d1d0d4f32b55c6/output
---- clang c90 pedantic errors ------------
main.c:1:1: error: 'main' must return 'int'
void main()
^~~~
int
1 error generated.
---- gcc c90 pedantic errors ------------
main.c:1:6: error: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^
---- clang c90 pedantic ------------
main.c:1:1: error: 'main' must return 'int'
void main()
^~~~
int
1 error generated.
---- clang c90 pedantic ------------
main.c:1:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^
